tests/ui/feature-gates/feature-gate-ergonomic-clones.stderr
error[E0658]: `.use` calls are experimental
  --> $DIR/feature-gate-ergonomic-clones.rs:2:7
   |
LL |     x.use
   |       ^^^
   |
   = note: see issue #132290 <https://github.com/rust-lang/rust/issues/132290> for more information
   = help: add `#![feature(ergonomic_clones)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `.use` calls are experimental
  --> $DIR/feature-gate-ergonomic-clones.rs:9:14
   |
LL |     let s2 = use || {
   |              ^^^
   |
   = note: see issue #132290 <https://github.com/rust-lang/rust/issues/132290> for more information
   = help: add `#![feature(ergonomic_clones)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `.use` calls are experimental
  --> $DIR/feature-gate-ergonomic-clones.rs:14:14
   |
LL |     let s3 = use || {
   |              ^^^
   |
   = note: see issue #132290 <https://github.com/rust-lang/rust/issues/132290> for more information
   = help: add `#![feature(ergonomic_clones)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
